--- a/app.css
+++ b/app.css
@@ -8724,6 +8724,77 @@ section.white-info {
     padding: 2rem; }
 
 /* line 421, stdin */
+.bio-modal {
+  padding: 0; }
+  /* line 423, stdin */
+  .bio-modal .bio-header {
+    background-color: #a0a8a0;
+    margin: 0 auto;
+    max-width: 62.5rem;
+    width: 100%; }
+    /* line 239, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
+    .bio-modal .bio-header:before, .bio-modal .bio-header:after {
+      content: " ";
+      display: table; }
+    /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
+    .bio-modal .bio-header:after {
+      clear: both; }
+    /* line 426, stdin */
+    .bio-modal .bio-header h2 {
+      display: block;
+      padding-left: 0.9375rem;
+      padding-right: 0.9375rem;
+      width: 100%;
+      float: left;
+      color: #222222;
+      text-transform: uppercase; }
+  /* line 433, stdin */
+  .bio-modal .bio-info {
+    margin: 0 auto;
+    max-width: 62.5rem;
+    width: 100%; }
+    /* line 239, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
+    .bio-modal .bio-info:before, .bio-modal .bio-info:after {
+      content: " ";
+      display: table; }
+    /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
+    .bio-modal .bio-info:after {
+      clear: both; }
+    /* line 435, stdin */
+    .bio-modal .bio-info .bio-cv {
+      padding-left: 0.9375rem;
+      padding-right: 0.9375rem;
+      width: 75%;
+      float: left;
+      padding: 1rem 1rem 1rem 1rem; }
+    /* line 439, stdin */
+    .bio-modal .bio-info .bio-extra {
+      padding-left: 0.9375rem;
+      padding-right: 0.9375rem;
+      width: 25%;
+      float: left;
+      padding: 0;
+      text-align: center; }
+  /* line 445, stdin */
+  .bio-modal a.close-reveal-modal {
+    color: #222222; }
+  /* line 448, stdin */
+  .bio-modal p {
+    color: #222222;
+    text-align: left;
+    font-size: .8rem; }
+  /* line 453, stdin */
+  .bio-modal em {
+    font-weight: bold;
+    font-style: normal; }
+  /* line 457, stdin */
+  .bio-modal .fa {
+    margin: 1rem 0 0 0;
+    color: #563f2d;
+    font-size: 2rem;
+    text-align: center; }
+
+/* line 465, stdin */
 .info-bottom-arrow {
   display: none;
   position: absolute;
@@ -8732,10 +8803,10 @@ section.white-info {
   text-align: center;
   background: none; }
   @media only screen and (min-width: 64.063em) {
-    /* line 421, stdin */
+    /* line 465, stdin */
     .info-bottom-arrow {
       display: block; } }
-  /* line 431, stdin */
+  /* line 475, stdin */
   .info-bottom-arrow .fa {
     color: #222222;
     background-color: #FFFFFF;
@@ -8745,7 +8816,7 @@ section.white-info {
     width: 4rem;
     border-radius: 50%; }
 
-/* line 442, stdin */
+/* line 486, stdin */
 .showme {
   max-height: 0;
   overflow: hidden;
@@ -8754,12 +8825,12 @@ section.white-info {
   -webkit-transition: visibility 0s, opacity .5s linear, height 1s;
           transition: visibility 0s, opacity .5s linear, height 1s; }
 
-/* line 450, stdin */
+/* line 494, stdin */
 #practice {
   background: url("/images/wood.jpg");
   background-size: cover; }
 
-/* line 455, stdin */
+/* line 499, stdin */
 #practice-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8773,7 +8844,7 @@ section.white-info {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #practice-contain:after {
     clear: both; }
-  /* line 459, stdin */
+  /* line 503, stdin */
   #practice-contain #description {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8781,32 +8852,32 @@ section.white-info {
     float: left;
     padding: 2rem;
     background: #FFFFFF; }
-    /* line 463, stdin */
+    /* line 507, stdin */
     #practice-contain #description h1, #practice-contain #description h2, #practice-contain #description h3, #practice-contain #description h4 {
       color: #222222; }
-    /* line 466, stdin */
+    /* line 510, stdin */
     #practice-contain #description p {
       color: #222222;
       text-align: left; }
-    /* line 470, stdin */
+    /* line 514, stdin */
     #practice-contain #description ul {
       color: #a0a8a0;
       list-style: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 459, stdin */
+      /* line 503, stdin */
       #practice-contain #description {
         padding-left: 0.9375rem;
         padding-right: 0.9375rem;
         width: 58.33333%;
         float: left;
         padding: 2rem; } }
-  /* line 479, stdin */
+  /* line 523, stdin */
   #practice-contain #pretty {
     display: none;
     background: url("/images/image4.jpg");
     background-size: cover; }
     @media only screen and (min-width: 64.063em) {
-      /* line 479, stdin */
+      /* line 523, stdin */
       #practice-contain #pretty {
         display: block;
         padding-left: 0.9375rem;
@@ -8817,12 +8888,12 @@ section.white-info {
 /*
    FOOTER SECTION
    ========================================================================== */
-/* line 495, stdin */
+/* line 539, stdin */
 input[type=text], textarea {
   color: #a0a8a0;
   border-radius: 10px; }
 
-/* line 500, stdin */
+/* line 544, stdin */
 input::-webkit-input-placeholder {
   color: #a0a8a0; }
 input::-moz-placeholder {
@@ -8832,7 +8903,7 @@ input:-ms-input-placeholder {
 input::placeholder {
   color: #a0a8a0; }
 
-/* line 504, stdin */
+/* line 548, stdin */
 textarea::-webkit-input-placeholder {
   color: #a0a8a0; }
 textarea::-moz-placeholder {
@@ -8842,11 +8913,11 @@ textarea:-ms-input-placeholder {
 textarea::placeholder {
   color: #a0a8a0; }
 
-/* line 508, stdin */
+/* line 552, stdin */
 textarea {
   min-height: 10rem; }
 
-/* line 512, stdin */
+/* line 556, stdin */
 button#submit-button {
   padding: 0;
   margin: 0;
@@ -8855,25 +8926,25 @@ button#submit-button {
   background-color: #a0a8a0;
   border-radius: 50%;
   font-size: 1.5rem; }
-  /* line 520, stdin */
+  /* line 564, stdin */
   button#submit-button:hover {
     background-color: #768076; }
 
-/* line 525, stdin */
+/* line 569, stdin */
 .footer-section {
   background: #563f2d;
   min-height: 100px; }
-  /* line 528, stdin */
+  /* line 572, stdin */
   .footer-section p {
     color: #a0a8a0;
     margin-top: 2rem; }
-  /* line 532, stdin */
+  /* line 576, stdin */
   .footer-section h1 {
     color: #a0a8a0;
     font-size: 1.5rem;
     margin-bottom: 2rem; }
 
-/* line 539, stdin */
+/* line 583, stdin */
 section#contact {
   margin: 0;
   max-width: 62.5rem;
@@ -8889,7 +8960,7 @@ section#contact {
   section#contact:after {
     clear: both; }
 
-/* line 546, stdin */
+/* line 590, stdin */
 #map-contain {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8901,7 +8972,7 @@ section#contact {
   width: 100%;
   height: 25rem; }
 
-/* line 555, stdin */
+/* line 599, stdin */
 #map-contain iframe {
   position: absolute;
   top: 0;
@@ -8909,7 +8980,7 @@ section#contact {
   width: 100% !important;
   height: 100% !important; }
 
-/* line 563, stdin */
+/* line 607, stdin */
 #contact-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8922,7 +8993,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #contact-contain:after {
     clear: both; }
-  /* line 566, stdin */
+  /* line 610, stdin */
   #contact-contain .contact-form {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8933,7 +9004,7 @@ section#contact {
     float: none;
     text-align: center; }
     @media only screen and (min-width: 64.063em) {
-      /* line 566, stdin */
+      /* line 610, stdin */
       #contact-contain .contact-form {
         display: block;
         padding-left: 0.9375rem;
@@ -8944,15 +9015,15 @@ section#contact {
         margin-right: auto;
         float: none; } }
 
-/* line 576, stdin */
+/* line 620, stdin */
 #contact-success {
   background-color: #563f2d;
   border: none; }
-  /* line 579, stdin */
+  /* line 623, stdin */
   #contact-success h2 {
     text-align: center; }
 
-/* line 584, stdin */
+/* line 628, stdin */
 #lp-info-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8964,7 +9035,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #lp-info-contain:after {
     clear: both; }
-  /* line 586, stdin */
+  /* line 630, stdin */
   #lp-info-contain #lp-info {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8974,7 +9045,7 @@ section#contact {
     margin-right: auto;
     float: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 586, stdin */
+      /* line 630, stdin */
       #lp-info-contain #lp-info {
         display: block;
         padding-left: 0.9375rem;
