--- a/scss/app.scss
+++ b/scss/app.scss
@@ -418,6 +418,50 @@ section.white-info{
   }
 }
 
+.bio-modal{
+  padding: 0;
+  .bio-header{
+    background-color: $lp-gray;
+    @include grid-row();
+    h2{
+      display: block;
+      @include grid-column(12);
+      color: $jet;
+      text-transform: uppercase;
+    }
+  }
+  .bio-info{
+    @include grid-row();
+    .bio-cv{
+      @include grid-column(9);
+      padding: 1rem 1rem 1rem 1rem;
+    }
+    .bio-extra{
+      @include grid-column(3);
+      padding: 0;
+      text-align: center;
+    }
+  }
+  a.close-reveal-modal{
+    color: $jet;
+  }
+  p{
+    color: $jet;
+    text-align: left;
+    font-size: .8rem;
+  }
+  em{
+    font-weight: bold;
+    font-style: normal;
+  }
+  .fa{
+    margin: 1rem 0 0 0;
+    color: #563f2d;
+    font-size: 2rem;
+    text-align: center;
+  }
+}
+
 .info-bottom-arrow{
   display: none;
   position: absolute;
