--- a/app.css
+++ b/app.css
@@ -8609,9 +8609,9 @@ section.white-info {
   /* line 336, stdin */
   section.white-info .gray-block {
     position: absolute;
-    top: 60%;
+    top: 50%;
     left: 0;
-    height: 40%;
+    height: 50%;
     width: 100%;
     background-color: #a0a8a0;
     display: none; }
@@ -8656,7 +8656,7 @@ section.white-info {
   margin: 0 auto;
   max-width: 62.5rem;
   width: 100%;
-  padding: 1rem; }
+  padding: 0rem 1rem 0 1rem; }
   /* line 239, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #info-blocks:before, #info-blocks:after {
     content: " ";
@@ -8673,19 +8673,18 @@ section.white-info {
   float: left;
   position: relative;
   text-align: center;
-  background-color: #FFFFFF;
-  border: 0px solid #FFFFFF;
-  border-radius: 10px; }
-  /* line 374, stdin */
+  background: none;
+  border: 0px solid #FFFFFF; }
+  /* line 373, stdin */
   .info-block h3 {
     margin-top: 1rem;
     margin-bottom: 0;
     text-transform: uppercase;
     color: #222222; }
-  /* line 380, stdin */
+  /* line 379, stdin */
   .info-block p {
     margin-bottom: 0; }
-  /* line 383, stdin */
+  /* line 382, stdin */
   .info-block a.bio {
     display: block;
     width: 100%;
@@ -8697,7 +8696,7 @@ section.white-info {
     font-family: "antonioregular";
     font-size: 1.2rem;
     text-transform: uppercase; }
-  /* line 395, stdin */
+  /* line 394, stdin */
   .info-block .fa {
     margin: 1rem 0 0 0;
     color: #563f2d;
@@ -8710,23 +8709,29 @@ section.white-info {
       width: 33.33333%;
       float: left;
       padding: 0; }
-      /* line 404, stdin */
+      /* line 403, stdin */
       .info-block:hover .showme {
         max-height: 10rem;
         visibility: visible;
         opacity: 1; }
-      /* line 409, stdin */
+      /* line 408, stdin */
       .info-block:hover .info-bottom-arrow {
         display: none; } }
-  /* line 414, stdin */
+  /* line 413, stdin */
   .info-block .inner {
+    background-color: #FFFFFF;
     position: relative;
-    padding: 2rem; }
+    border-radius: 10px;
+    margin: 2rem;
+    padding: 0 0 2rem 0; }
+    /* line 420, stdin */
+    .info-block .inner img {
+      padding: 1rem; }
 
-/* line 421, stdin */
+/* line 426, stdin */
 .bio-modal {
   padding: 0; }
-  /* line 423, stdin */
+  /* line 428, stdin */
   .bio-modal .bio-header {
     background-color: #a0a8a0;
     margin: 0 auto;
@@ -8739,7 +8744,7 @@ section.white-info {
     /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
     .bio-modal .bio-header:after {
       clear: both; }
-    /* line 426, stdin */
+    /* line 431, stdin */
     .bio-modal .bio-header h2 {
       display: block;
       padding-left: 0.9375rem;
@@ -8748,7 +8753,7 @@ section.white-info {
       float: left;
       color: #222222;
       text-transform: uppercase; }
-  /* line 433, stdin */
+  /* line 438, stdin */
   .bio-modal .bio-info {
     margin: 0 auto;
     max-width: 62.5rem;
@@ -8760,14 +8765,14 @@ section.white-info {
     /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
     .bio-modal .bio-info:after {
       clear: both; }
-    /* line 435, stdin */
+    /* line 440, stdin */
     .bio-modal .bio-info .bio-cv {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem;
       width: 75%;
       float: left;
       padding: 1rem 1rem 1rem 1rem; }
-    /* line 439, stdin */
+    /* line 444, stdin */
     .bio-modal .bio-info .bio-extra {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem;
@@ -8775,38 +8780,38 @@ section.white-info {
       float: left;
       padding: 0;
       text-align: center; }
-  /* line 445, stdin */
+  /* line 450, stdin */
   .bio-modal a.close-reveal-modal {
     color: #222222; }
-  /* line 448, stdin */
+  /* line 453, stdin */
   .bio-modal p {
     color: #222222;
     text-align: left;
     font-size: .8rem; }
-  /* line 453, stdin */
+  /* line 458, stdin */
   .bio-modal em {
     font-weight: bold;
     font-style: normal; }
-  /* line 457, stdin */
+  /* line 462, stdin */
   .bio-modal .fa {
     margin: 1rem 0 0 0;
     color: #563f2d;
     font-size: 2rem;
     text-align: center; }
 
-/* line 465, stdin */
+/* line 470, stdin */
 .info-bottom-arrow {
   display: none;
   position: absolute;
-  bottom: -1.5625rem;
+  bottom: 0;
   width: 100%;
   text-align: center;
   background: none; }
   @media only screen and (min-width: 64.063em) {
-    /* line 465, stdin */
+    /* line 470, stdin */
     .info-bottom-arrow {
       display: block; } }
-  /* line 475, stdin */
+  /* line 480, stdin */
   .info-bottom-arrow .fa {
     color: #222222;
     background-color: #FFFFFF;
@@ -8816,7 +8821,7 @@ section.white-info {
     width: 4rem;
     border-radius: 50%; }
 
-/* line 486, stdin */
+/* line 491, stdin */
 .showme {
   max-height: 0;
   overflow: hidden;
@@ -8825,12 +8830,12 @@ section.white-info {
   -webkit-transition: visibility 0s, opacity .5s linear, height 1s;
           transition: visibility 0s, opacity .5s linear, height 1s; }
 
-/* line 494, stdin */
+/* line 499, stdin */
 #practice {
   background: url("/images/wood.jpg");
   background-size: cover; }
 
-/* line 499, stdin */
+/* line 504, stdin */
 #practice-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8844,7 +8849,7 @@ section.white-info {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #practice-contain:after {
     clear: both; }
-  /* line 503, stdin */
+  /* line 508, stdin */
   #practice-contain #description {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8852,32 +8857,32 @@ section.white-info {
     float: left;
     padding: 2rem;
     background: #FFFFFF; }
-    /* line 507, stdin */
+    /* line 512, stdin */
     #practice-contain #description h1, #practice-contain #description h2, #practice-contain #description h3, #practice-contain #description h4 {
       color: #222222; }
-    /* line 510, stdin */
+    /* line 515, stdin */
     #practice-contain #description p {
       color: #222222;
       text-align: left; }
-    /* line 514, stdin */
+    /* line 519, stdin */
     #practice-contain #description ul {
       color: #a0a8a0;
       list-style: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 503, stdin */
+      /* line 508, stdin */
       #practice-contain #description {
         padding-left: 0.9375rem;
         padding-right: 0.9375rem;
         width: 58.33333%;
         float: left;
         padding: 2rem; } }
-  /* line 523, stdin */
+  /* line 528, stdin */
   #practice-contain #pretty {
     display: none;
     background: url("/images/image4.jpg");
     background-size: cover; }
     @media only screen and (min-width: 64.063em) {
-      /* line 523, stdin */
+      /* line 528, stdin */
       #practice-contain #pretty {
         display: block;
         padding-left: 0.9375rem;
@@ -8888,12 +8893,12 @@ section.white-info {
 /*
    FOOTER SECTION
    ========================================================================== */
-/* line 539, stdin */
+/* line 544, stdin */
 input[type=text], textarea {
   color: #a0a8a0;
   border-radius: 10px; }
 
-/* line 544, stdin */
+/* line 549, stdin */
 input::-webkit-input-placeholder {
   color: #a0a8a0; }
 input::-moz-placeholder {
@@ -8903,7 +8908,7 @@ input:-ms-input-placeholder {
 input::placeholder {
   color: #a0a8a0; }
 
-/* line 548, stdin */
+/* line 553, stdin */
 textarea::-webkit-input-placeholder {
   color: #a0a8a0; }
 textarea::-moz-placeholder {
@@ -8913,11 +8918,11 @@ textarea:-ms-input-placeholder {
 textarea::placeholder {
   color: #a0a8a0; }
 
-/* line 552, stdin */
+/* line 557, stdin */
 textarea {
   min-height: 10rem; }
 
-/* line 556, stdin */
+/* line 561, stdin */
 button#submit-button {
   padding: 0;
   margin: 0;
@@ -8926,25 +8931,25 @@ button#submit-button {
   background-color: #a0a8a0;
   border-radius: 50%;
   font-size: 1.5rem; }
-  /* line 564, stdin */
+  /* line 569, stdin */
   button#submit-button:hover {
     background-color: #768076; }
 
-/* line 569, stdin */
+/* line 574, stdin */
 .footer-section {
   background: #563f2d;
   min-height: 100px; }
-  /* line 572, stdin */
+  /* line 577, stdin */
   .footer-section p {
     color: #a0a8a0;
     margin-top: 2rem; }
-  /* line 576, stdin */
+  /* line 581, stdin */
   .footer-section h1 {
     color: #a0a8a0;
     font-size: 1.5rem;
     margin-bottom: 2rem; }
 
-/* line 583, stdin */
+/* line 588, stdin */
 section#contact {
   margin: 0;
   max-width: 62.5rem;
@@ -8960,7 +8965,7 @@ section#contact {
   section#contact:after {
     clear: both; }
 
-/* line 590, stdin */
+/* line 595, stdin */
 #map-contain {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8972,7 +8977,7 @@ section#contact {
   width: 100%;
   height: 25rem; }
 
-/* line 599, stdin */
+/* line 604, stdin */
 #map-contain iframe {
   position: absolute;
   top: 0;
@@ -8980,7 +8985,7 @@ section#contact {
   width: 100% !important;
   height: 100% !important; }
 
-/* line 607, stdin */
+/* line 612, stdin */
 #contact-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8993,7 +8998,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #contact-contain:after {
     clear: both; }
-  /* line 610, stdin */
+  /* line 615, stdin */
   #contact-contain .contact-form {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -9004,7 +9009,7 @@ section#contact {
     float: none;
     text-align: center; }
     @media only screen and (min-width: 64.063em) {
-      /* line 610, stdin */
+      /* line 615, stdin */
       #contact-contain .contact-form {
         display: block;
         padding-left: 0.9375rem;
@@ -9015,15 +9020,15 @@ section#contact {
         margin-right: auto;
         float: none; } }
 
-/* line 620, stdin */
+/* line 625, stdin */
 #contact-success {
   background-color: #563f2d;
   border: none; }
-  /* line 623, stdin */
+  /* line 628, stdin */
   #contact-success h2 {
     text-align: center; }
 
-/* line 628, stdin */
+/* line 633, stdin */
 #lp-info-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -9035,7 +9040,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #lp-info-contain:after {
     clear: both; }
-  /* line 630, stdin */
+  /* line 635, stdin */
   #lp-info-contain #lp-info {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -9045,7 +9050,7 @@ section#contact {
     margin-right: auto;
     float: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 630, stdin */
+      /* line 635, stdin */
       #lp-info-contain #lp-info {
         display: block;
         padding-left: 0.9375rem;
