--- a/scss/app.scss
+++ b/scss/app.scss
@@ -335,9 +335,9 @@ section.white-info{
   }
   .gray-block{
     position: absolute;
-    top: 60%;
+    top: 50%;
     left: 0;
-    height: 40%;
+    height: 50%;
     width: 100%;
     background-color: $lp-gray;
     display: none;
@@ -361,16 +361,15 @@ section.white-info{
 
 #info-blocks{
   @include grid-row();
-  padding: 1rem;
+  padding: 0rem 1rem 0 1rem;
 }
 
 .info-block{
   @include grid-column(12);
   position: relative;
   text-align: center;
-  background-color: $white;
+  background: none;
   border: 0px solid $white;
-  border-radius: 10px;
   h3{
     margin-top: 1rem;
     margin-bottom: 0;
@@ -412,9 +411,15 @@ section.white-info{
     }
   }
   .inner{
+    background-color: $white;
     position: relative;
     //height: 250px;
-    padding: 2rem;
+    border-radius: 10px;
+    margin: 2rem;
+    padding: 0 0 2rem 0;
+    img{
+      padding: 1rem;
+    }
   }
 }
 
@@ -465,7 +470,7 @@ section.white-info{
 .info-bottom-arrow{
   display: none;
   position: absolute;
-  bottom: rem-calc(-25);
+  bottom: rem-calc(0);
   width: 100%;
   text-align: center;
   background: none;
