--- a/scss/app.scss
+++ b/scss/app.scss
@@ -574,7 +574,7 @@ textarea{
 
 button#submit-button{
   padding: 0;
-  margin: 0;
+  margin: 1rem 0 0 0;
   width: 4rem;
   height: 4rem;
   background-color: $lp-gray;
